Corrigir URLs das imagens para caminhos absolutos /csa/

--- a/csa/index.html
+++ b/csa/index.html
@@ -11,7 +11,7 @@
       --primary:#4e0073;
       --secondary:#ff9b00;
       --cream:#fff7e0;
-      --bg-acai:url('./fundo.jpg');
+      --bg-acai:url('/csa/fundo.jpg');
       /* Removido --bg-ice para simplificar */
     }
     *{box-sizing:border-box;margin:0;padding:0;font-family:'Montserrat',sans-serif;}
@@ -66,7 +66,7 @@
   <main class="card">
     <div class="brand">
       <!-- Use a imagem enviada (coloque o arquivo PNG na mesma pasta ou ajuste o path) -->
-      <img class="brand-logo" src="./acaiblessedlgsemfundo.png" alt="Logo Açaí Blessed">
+      <img class="brand-logo" src="/csa/acaiblessedlgsemfundo.png" alt="Logo Açaí Blessed">
       <div class="brand-text">
         <h1 class="logo">AÇAÍ<br>BLESSED</h1>
         <p class="subtitle">Monte do seu jeito 🍧</p>
